# ChangeLog for gnome-base/gconf
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.223 2010/03/10 08:54:12 josejx Exp $

  10 Mar 2010; Joseph Jezak <josejx@gentoo.org> gconf-2.28.0-r1.ebuild:
  Marked ~ppc/~ppc64 for bug #296548.

  28 Feb 2010; Raúl Porcel <armin76@gentoo.org> gconf-2.28.0.ebuild,
  gconf-2.28.0-r1.ebuild:
  Add ~alpha/~arm/~ia64/~sparc

  16 Jan 2010; Raúl Porcel <armin76@gentoo.org> gconf-2.26.2-r1.ebuild:
  sh stable

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org> gconf-2.26.2-r1.ebuild:
  Stable for HPPA (bug #281427).

  03 Dec 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking gconf-2.26.2-r1 ppc64 stable for bug 281427

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org> gconf-2.26.2-r1.ebuild:
  alpha/ia64/sparc stable wrt #281427

  05 Nov 2009; Markus Meier <maekke@gentoo.org> gconf-2.26.2-r1.ebuild:
  arm stable, bug #281427

*gconf-2.28.0-r1 (04 Nov 2009)

  04 Nov 2009; Romain Perier <mrpouet@gentoo.org>
  +gconf-2.28.0-r1.ebuild,
  +files/gconf-2.28.0-entry-set-value-sigsegv.patch:
  Do not crash in gconf_entry_set_value() when entry is NULL.

*gconf-2.28.0 (29 Oct 2009)

  29 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org> -gconf-2.26.0.ebuild,
  -gconf-2.26.2.ebuild, +gconf-2.28.0.ebuild:
  New version for GNOME 2.28. Clean up old revision.

  24 Oct 2009; nixnut <nixnut@gentoo.org> gconf-2.26.2-r1.ebuild:
  ppc stable #281427

  16 Oct 2009; Markus Meier <maekke@gentoo.org> gconf-2.26.2-r1.ebuild:
  x86 stable, bug #281427

  08 Oct 2009; Olivier Crête <tester@gentoo.org> gconf-2.26.2-r1.ebuild:
  Stable on amd64, bug #281427

*gconf-2.26.2-r1 (16 Jun 2009)

  16 Jun 2009; <mrpouet@gentoo.org> +gconf-2.26.2-r1.ebuild:
  Prevent totaly disabling debug mode, some apps can crash in the worst case

*gconf-2.26.2 (16 May 2009)

  16 May 2009; Gilles Dartiguelongue <eva@gentoo.org> +gconf-2.26.2.ebuild: