@@ -6,9 +6,11 @@ AUX gconf-2.28.0-prefix.patch 462 RMD160 9bb422f7f86363f62c15bc788d5694befb29b7a
 DIST GConf-2.24.0.tar.bz2 1467817 RMD160 b4016275e9dffa248620303bc2241f6c0081be06 SHA1 e93ff2609c0278075acabdf609f42aa406e20c8e SHA256 990003904ee13b2fd98a61d55fa4d0fcb30fb233454a036bb9465f42d1acbb1b
 DIST GConf-2.26.2.tar.bz2 1474738 RMD160 280cd55dc3562445c716b88dfddba4ddd2508786 SHA1 bf5323d974fa22165de2144100234647fd50ef17 SHA256 717af270db891088394d154e3e22acc01af382306624c83679a4f8d6ba8467ed
 DIST GConf-2.28.0.tar.bz2 1476190 RMD160 99b09ab7d6453338adacc1f194013294b65fe33c SHA1 8371d88cc84fd727dfd0f8d413fa20a8bfe814fd SHA256 d057dcfe2bfb2a80e592349c2a78d7dce12d19542aeced466c64fb701c806ac8
+DIST GConf-2.28.1.tar.bz2 1476141 RMD160 9ee3b6e68553997a128ca2b49992ddfbe157609b SHA1 944e067a85b43e7a778b9ee244f85508931a49a0 SHA256 53c477f9086057b0c84816a1c979e01537b862fbcacb6af4b62f8cffec4b3000
 EBUILD gconf-2.24.0.ebuild 2477 RMD160 6f5abdf3a731ae3832abf5c248f75d768cbb1ed0 SHA1 3ba25dfe7de59bf3b9b2f667404a481536c41e40 SHA256 044db05b0ad632f0438f48189a90a3eca68bf1315119c3f0fa5e84ceeac5133b
 EBUILD gconf-2.26.2-r1.ebuild 2788 RMD160 c993244b4400a34712a2cd0556abe1ef445cd5bc SHA1 e9aca749df5f997d054272c4c982f6fa7876d905 SHA256 5a5f01445c9762bc453c447831e6172c1aa09c39ddf98f6a033d718f2ecc253d
 EBUILD gconf-2.28.0-r01.1.ebuild 3038 RMD160 d3e261d4cf928ed7d74c57d70c76788c2672cf79 SHA1 2b41b58ebf38bd41119e7934b6ad76758f9d9ebf SHA256 93280ce73d013ec7164fb33e0d8b2bb08932dff320a73af529fe271a586e750c
 EBUILD gconf-2.28.0.ebuild 2784 RMD160 c9116bb75318d46ae58c3807065074cbd7bff860 SHA1 5361e8772fd52bd6bfb338325c0256f120aa0720 SHA256 69794e395028e06bf23efbf9322c9911b3a21d0be249e14d5a53edf5c4f8af06
-MISC ChangeLog 29230 RMD160 b1beb4b6e09de99aa873baca1aac92356b91b86a SHA1 60171eb15f23845599891ba424eea725490d9c20 SHA256 e1087ad068d31cfbf6fb7b4a47cc48dd6c6b722ecbb8dccb3d2a0d57bfd667c8
+EBUILD gconf-2.28.1.ebuild 3041 RMD160 8665a3b6d43ea25579bd0232673f0bd185ac8ff4 SHA1 c6fb98c93e227163139762d2b1e14f06f0372a78 SHA256 7ecd7fb61809f7fed523ce0d8c4c1a0ea7411c744a6b4381a009422a2b2834fe
+MISC ChangeLog 29576 RMD160 5075578b116096304c3f432f00fd653f1d67307c SHA1 46e6c7dacc602de4a3b403d492833c57f411eb72 SHA256 92f98373d4e6fc71b3afa0d1596d9f20ef347066e1a8253dd46ca9f82ab63a85
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
